Corrected spacing in heading section and cleaned up code in html

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,11 +117,16 @@ header {
 /**************************************************/
 /* Header message - Mobile */
 /**************************************************/
+.header-message-container {
+    display: flex;
+    align-items: center;
+    flex-flow: column wrap;
+}
+
 h1 {
     font-size: 40px;
     font-weight: 700;
     line-height: 40px;
-    text-align: center;
     color: #ffffff;
     margin-left: 16px;
     margin-right: 16px;
@@ -138,14 +143,13 @@ h1 {
     font-size: 16px;
     line-height: 26px;
     font-weight: 500;
-    text-align: center;
     margin-top: 0px;
     margin-left: 16px;
     margin-right: 16px;
     margin-bottom: 24px;
 }
 
-.contact-me-link {
+.contact-link-header {
     color: #ffffff;
     border-bottom: 2px solid #4EE1A0;
     line-height: 38px;
@@ -154,7 +158,7 @@ h1 {
     letter-spacing: 2.29px;
     text-transform: uppercase;
     text-decoration: none;
-    padding-bottom: 10px;  
+    padding-bottom: 10px; 
 }
 
 .contact-me-link:hover {
@@ -207,7 +211,7 @@ h1 {
 /* Project Section  - Mobile */
 /**************************************************/
 .projects-wrapper {
-    margin-top: 42px;
+  margin-top: 42px;
 }
 
 .project-heading {
@@ -219,7 +223,6 @@ h1 {
     margin-right: 16px
 }
 
-
 .project-title {
     color: rgba(255, 255, 255, 1);
     font-weight: 700;
@@ -227,6 +230,18 @@ h1 {
     line-height: 40px;
     letter-spacing: -1.14px;
     margin-bottom: 0;
+}
+
+.contact-me-link { 
+    color: #ffffff;
+    border-bottom: 2px solid #4EE1A0;
+    line-height: 38px;
+    font-weight: 700;
+    font-size: 16px;
+    letter-spacing: 2.29px;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding-bottom: 10px;  
 }
 
 #project-contact {
@@ -237,7 +252,7 @@ h1 {
     line-height: 26px;
 }
 
-.project-container {
+.project-wrapper {
     display: flex;
     align-items: center;
     flex-flow: column wrap;
@@ -450,7 +465,6 @@ textarea::placeholder {
     letter-spacing: -0.17px;
     margin: 0;
     padding-top: 5px;
-    /* margin-bottom: 11px; */
     text-align: right;
 }
 
@@ -555,7 +569,7 @@ footer p {
         margin-bottom: 34px;
         margin-left: 0;
     }
-
+    
     /* container for positioned images */
     .header-image-container {
         position: relative;
@@ -599,8 +613,6 @@ footer p {
     
     .contact-link-header {
         align-self: flex-start;
-        margin-left: 32px;
-        margin-top: -35px;
     }
     
     .contact-me-link {
@@ -652,10 +664,12 @@ footer p {
 /* Project Section - Tablet */
 /**************************************************/
     .projects-wrapper {
+       
         margin-top: 100px;
     }
 
     .project-heading {
+       
         margin-left: 32px;
         margin-right: 30px
     }
@@ -672,14 +686,20 @@ footer p {
         text-align: center;
     }
 
+    .project-wrapper {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center; 
+        align-items: center;
+        margin-left: 30px;
+        margin-bottom: 112px;
+    }
+
     .project-container {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between; 
         align-items: center;
-        margin-left: 30px;
-        margin-right: 30px;
-        margin-bottom: 112px;
     }
 
     .project {
@@ -818,9 +838,7 @@ footer p {
     }
  
     .header-message-container {
-        height: 303px;
         width: 706px;
-        margin-top: -522px;
         margin-left: 165px;
     }
 
@@ -828,7 +846,7 @@ footer p {
         font-size: 88px;
         line-height: 88px;
         letter-spacing: -2.5px;
-        width: 709px;
+        align-self: flex-start;
     }
 
     .move-words-down {
@@ -842,7 +860,6 @@ footer p {
     .header-message {
         margin-top: 43px;
         margin-bottom: 66px;
-        width: 445px;
     }
 
     /* container for positioned images */
@@ -882,12 +899,6 @@ footer p {
     /* This changes the image to desktop size */
     #selfie {
         content: url('../images/image-profile-desktop.webp');
-    }
-    
-    .contact-link-header {
-        align-self: flex-start;
-        margin-left: 165px;
-        margin-top: 66px;
     }
     
     .contact-me-link {
@@ -942,6 +953,10 @@ footer p {
         margin-left: 165px;
         margin-right: 165px;
         margin-bottom: 139px;
+        justify-content: space-between;
+    }
+    .project-wrapper {
+        margin-left: 0;
     }
 
     .project {
